<resources>
    <string name="app_name">InfoGate</string>
    <string name="navigration_open">Open Navigation drawer</string>
    <string name="navigration_close">Close Navigation drawer</string>
    <string name="scan">Scan here for information about your PC.</string>

    <!--    activity_main-->
    <string name="blackLogo">blackLogo</string>
    <string name="whiteLogo">whiteLogo</string>

    <!--    activity_scan-->
    <string name="scanHere">SCAN HERE</string>
    <string name="scann">Scan</string>

    <!--    about Us-->
    <string name="ourVision">Our team is passionate about leveraging blockchain technology to create secure and transparent solutions for the future.Together, we shared commitment to excellence and a passion for delivering good-quality results.</string>
    <string name="aboutus">We are a group of three enthusiastic students dedicated to providing comprehensive information about the various computers from labs in our college campus.</string>
    <string name="welcome">Welcome to our Student Community!</string>
    <string name="meet">Meet Our Team:</string>
    <string name="content1">Team Member 1</string>
    <string name="aboutVinita">Vinita Patil\nRole: UI/UX Designer</string>
    <string name="content2">Team Member 2</string>
    <string name="aboutKundan">Kundan Jangale\nRole: Blockchain Developer</string>
    <string name="content3">Team Member 3</string>
    <string name="aboutPrerana">Prerana Pawar\nRole: Backend Developer</string>
    <string name="vision">Our Vision:</string>
    <string name="aboutUsHeading">About Us</string>
    <string name="content4">TopBG</string>

    <!--    About App-->
    <string name="aboutappHeading">ABOUT APP</string>
    <string name="aboutAppDescription">The name of our app is InfoGate.This app has been created for computer labs using blockchain. Through this app, the user can scan the QR code installed on the computer and access all its information, such as which department it belongs to and the date of its installation.\n\nIn this app, there are options for both user login and admin login. A user can log in and scan, and then obtain the complete information. An admin can retrieve all the records stored in the database using blockchain and can also add records. After adding records, a QR code will be generated, which can then be printed as well.\n\nOur mission is to create a user-friendly app that serves as a one-stop destination for college faculty to access comprehensive information about our college\'s computer lab.\n\nThank you for using our InfoGate App. We hope you find it informative and valuable for student\'s academic journey\!</string>
    <string name="content">About App</string>


    <!--    Admin Login-->
    <string name="adminLoginHeading">Admin Login</string>
    <string name="btnText">LOGIN</string>
    <string name="passHint">Password</string>
    <string name="usernameHint">UserName</string>
    <string name="contentAdmin">Admin TopBG Image</string>
    <string name="adminArrow">Admin Arrow</string>

    <!--    after Admin Login-->
    <string name="addRecordsBtnText">ADD RECORDS</string>
    <string name="viewRecordsBtnText">VIEW RECORDS</string>
    <string name="topImage">Top Image</string>


    <!--    Add Records-->
    <string name="addMonitorHeading">ADD MONITOR</string>
    <string name="addCPUHeading">ADD CPU</string>
    <string name="addKeyboardHeading">ADD KEYBOARD</string>
    <string name="addMouseHeading">ADD MOUSE</string>
    <string name="addPrinterHeading">ADD PRINTER</string>
    <string name="addScannerHeading">ADD SCANNER</string>
    <string name="nameOfDevice">Device Name</string>
    <string name="nameOfBrand">Name of Brand</string>
    <string name="suppliersFullAddress">Suppliers Full Address</string>
    <string name="dateofReceipt">Date of Receipt(eg.12/12/24)</string>
    <string name="dsrPage">DSR Page No. and SR No.</string>
    <string name="SrNo">Serial No.</string>
    <string name="cost">Cost of Computer</string>
    <string name="nameofDepartment">Name of Department</string>
    <string name="nameofLab">Name of Laboratory</string>
    <string name="addbtn">ADD</string>

    <!--    activity_getInfo-->
    <string name="records">Records</string>
    <string name="topImg">TopImage</string>
</resources>