<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#343434"
    android:fadeScrollbars="false"
    tools:context=".AboutApp">

    <ImageView
        android:id="@+id/aboutappimg"
        android:layout_width="@dimen/_330sdp"
        android:layout_height="@dimen/_100ssp"
        android:background="#271D1D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_background"
        android:contentDescription="@string/content"/>

    <TextView
        android:id="@+id/aboutapptextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_100ssp"
        android:fontFamily="@font/adamina"
        android:text="@string/aboutappHeading"
        android:textColor="#ffffff"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.088" />

    <TextView
        android:id="@+id/aboutapptextview"
        android:layout_width="@dimen/_275sdp"
        android:layout_height="@dimen/_450sdp"
        android:fontFamily="@font/open_sans"
        android:text="@string/aboutAppDescription"
        android:textAlignment="center"
        android:textColor="#E1A500"
        android:textSize="@dimen/_10ssp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutappimg"
        app:layout_constraintVertical_bias="0.156" />


</androidx.constraintlayout.widget.ConstraintLayout>


